fix overflow text on meme div

--- a/web/scss/themes/odysee/init/_gui.scss
+++ b/web/scss/themes/odysee/init/_gui.scss
@@ -514,4 +514,8 @@ textarea {
     font-size: 1.2rem;
     margin-bottom: var(--spacing-l);
   }
+
+  > .button {
+    white-space: initial;
+  }
 }
